; ModuleID = '/home/carl/AnghaBench/tmux/extr_tty-keys.c_tty_keys_find.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_tty-keys.c_tty_keys_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_key = type { i32 }
%struct.tty = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.tty_key* (%struct.tty*, i8*, i64, i64*)* @tty_keys_find to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.tty_key* @tty_keys_find(%struct.tty* %0, i8* %1, i64 %2, i64* %3) #0 {
  %5 = alloca %struct.tty*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64*, align 8
  store %struct.tty* %0, %struct.tty** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64* %3, i64** %8, align 8
  %9 = load i64*, i64** %8, align 8
  store i64 0, i64* %9, align 8
  %10 = load %struct.tty*, %struct.tty** %5, align 8
  %11 = getelementptr inbounds %struct.tty, %struct.tty* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = load i64, i64* %7, align 8
  %15 = load i64*, i64** %8, align 8
  %16 = call %struct.tty_key* @tty_keys_find1(i32 %12, i8* %13, i64 %14, i64* %15)
  ret %struct.tty_key* %16
}

declare dso_local %struct.tty_key* @tty_keys_find1(i32, i8*, i64, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
